--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,32 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/main_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashScreen">
+    tools:context=".MainActivity">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" >
+
+            <Spinner
+                android:id="@+id/travelType_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
 
 
-    <ImageView
-        android:id="@+id/splash_icon"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-      android:layout_centerInParent="true"
-        android:src="@drawable/reddit_icon" />
+    <include layout="@layout/content_main" />
 
-    <TextView
-        android:id="@+id/splash_screen"
+    <RelativeLayout
+        android:id="@+id/header"
+        android:layout_below="@id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/circular_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/hotel"/>
+
+        <TextView
+            android:id="@+id/text_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Home Feed"
+            android:layout_margin="10dp"
+            android:layout_toRightOf="@id/circular_image"/>
+
+        <TextView
+            android:id="@+id/sub_heading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_header"
+            android:layout_toRightOf="@id/circular_image"
+            android:text="your feed is ready"
+            android:layout_margin="10dp"
+            />
+        <ImageView
+            android:id="@+id/square_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@id/text_header"
+            android:layout_marginLeft="150dp"
+            android:src="@drawable/hotel"
+            />
+
+    </RelativeLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_margin="7dp"
+        android:id="@+id/recycler_view"
+        android:layout_below="@id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/splash_icon"
-
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:text="Reddit"
-        android:textSize="40sp"
-        android:textStyle="italic" />
-
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="39dp"
+        app:srcCompat="@drawable/plus" />
 
 </RelativeLayout>
