--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/main_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
+
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -17,79 +15,45 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
-
-            <Spinner
-                android:id="@+id/travelType_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
 
-    <include layout="@layout/content_main" />
-
-    <RelativeLayout
-        android:id="@+id/header"
-        android:layout_below="@id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/circular_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/hotel"/>
-
-        <TextView
-            android:id="@+id/text_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home Feed"
-            android:layout_margin="10dp"
-            android:layout_toRightOf="@id/circular_image"/>
-
-        <TextView
-            android:id="@+id/sub_heading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_header"
-            android:layout_toRightOf="@id/circular_image"
-            android:text="your feed is ready"
-            android:layout_margin="10dp"
-            />
-        <ImageView
-            android:id="@+id/square_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_toRightOf="@id/text_header"
-            android:layout_marginLeft="150dp"
-            android:src="@drawable/hotel"
-            />
-
-    </RelativeLayout>
-
     <android.support.v7.widget.RecyclerView
-        android:layout_margin="7dp"
         android:id="@+id/recycler_view"
-        android:layout_below="@id/header"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/appbar">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible" />
+
+
+    <include layout="@layout/content_main2" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="39dp"
-        app:srcCompat="@drawable/plus" />
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="bottom"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="54dp"
+        app:srcCompat="@drawable/tick_floating_menu" />
 
 </RelativeLayout>
