--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#D81B60</color>
-    <color name="colorPrimaryDark">#D81B60</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#b2358b</color>
+    <color name="colorPrimaryDark">#952a74</color>
+    <color name="colorAccent">#b2358b</color>
+    <color name="app_blue">#b2358b</color>
+
 </resources>
